# intrinsically-motivated-wm

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  RESULTS.md  memo.md  pyproject.toml  run_experiment.sh  run_nohup.sh
docs/: atari100k_params.md  cos_replay.md  curious_replay.md  dormant.md  dormat.md  intrinsic_reward.md  paper_params.md
dreamerv3/: ac_agent.py  agent.py  configs.yaml  dormant.py  intrinsic.py  main.py  rssm.py
embodied/: __init__.py
embodied/core/: base.py  chunk.py  clock.py  driver.py  limiters.py  random.py  replay.py  selectors.py  streams.py  wrappers.py
embodied/envs/: atari.py  bsuite.py  crafter.py  dmc.py  dmlab.py  dummy.py  from_dm.py  from_gym.py  loconav.py  minecraft.py  minecraft_flat.py  pinpad.py  procgen.py
embodied/jax/: agent.py  heads.py  internal.py  nets.py  opt.py  outs.py  transform.py  utils.py
embodied/perf/: test_bandwidth.py  test_distr.py  test_driver.py  test_replay.py
embodied/run/: eval_only.py  metrics.py  parallel.py  train.py  train_eval.py
embodied/tests/: test_dormant.py  test_driver.py  test_layer_scan.py  test_parallel.py  test_replay.py  test_sampletree.py  test_train.py  utils.py
exp_script/: 251226_run_dmc_cheetah_run_dormat.sh  251226_run_dmc_walker_walk_dormat.sh  251226_run_mspackman_dormat.sh  251229_run_mspackman_dormat_ac.sh  251229_run_mspackman_dormat_curious.sh  251229_run_mspackman_intrinsic.sh  251230_run_dmc_cheetah_run_dormat_ac.sh  251230_run_dmc_cheetah_run_proprio.sh  251230_run_dmc_cheetah_run_proprio_ac.sh  251230_run_mspackman_curious.sh  251230_run_mspackman_dormat_ac.sh  251231_run_mspackman_curious.sh  260104_run_mspackman_trendmix.sh  260104_run_mspackman_trendmix_multi.sh  260105_run_mspackman_trendmix_multi.sh  260106_run_mspackman_trendmix_multi.sh  260107_run_mspackman_normal.sh  260108_run_mspackman_normal_intrinsic.sh  260109_run_multi_games_normal_comparison.sh  run_seaquest.sh  run_seaquest_dormat.sh
notebooks/: 251225_clip_jax.ipynb  251225_clip_torch.ipynb  251226_visualize_ent.ipynb
old_scripts/: plot.py  setup.py
scores/: view.py
